--- a/profile.css
+++ b/profile.css
@@ -76,6 +76,7 @@ nav a:hover{
     align-content: center;
     padding: 0;
     margin: 0;
+    width: 100%;
     
 
 }
@@ -191,13 +192,14 @@ footer{
 
 }
 
-@media screen and (max-width: 820px){
+@media screen and (max-width: 820px) {
 
     .nav{
         position: fixed;
         display: flex;
         justify-content: space-around;
         align-items: center;
+        width: 100%;
         
     }
 
@@ -227,7 +229,7 @@ footer{
 
 }
 
-@media screen and (max-width: 650px){
+@media all and (max-width: 650px) {
 
     header{
         position: absolute;
