--- a/profile.css
+++ b/profile.css
@@ -19,7 +19,7 @@ body{
 
 h2{
 
-    font-weight: 800;
+    font-weight: 900;
 }
 header{
     position: relative;
@@ -130,6 +130,10 @@ nav a:hover{
     justify-content: space-evenly;
 }
 
+.project-screenshots p {
+    font-weight: 600;
+}
+
 .project-tile{
     margin: 20px;
     text-align: center;
@@ -238,23 +242,34 @@ footer{
 }
 @media screen and (max-width: 400px){
 
+    .welcome-section h1{
+        font-size: 3em;
+    }
+
     .profile-pic img{
 
-        width: 300px;
-        height: 300px;
+        max-width: 300px;
+        max-height: 300px;
 
         
     }
      .profile-details{
-        width: 300px;
-        height: 300px;
+        max-width: 300px;
+        max-height: 300px;
     }
 
     .profile-details p{
-        font-size: 1.5rem;
-        padding: 0.5rem;
+        font-size: 1.5em;
+        padding: 0.5em;
        
      }
+
+
+    .welcome-section{
+        position: relative;
+        height: 100vh;
+        padding-top: 40px;
+
 
 
     
@@ -284,7 +299,7 @@ footer{
 
     }
     .welcome-section h1{
-        font-size: 3em;
+        font-size: 2em;
         
     }
 
@@ -295,19 +310,19 @@ footer{
 
     .profile-pic img{
 
-        width: 250px;
-        height: 250px;
+        max-width: 250px;
+        max-height: 250px;
 
         
     }
      .profile-details{
-        width: 250px;
-        height: 250px;
+        max-width: 250px;
+        max-height: 250px;
     }
 
     .profile-details p{
-        font-size: 1.5rem;
-        padding: 0.2rem;
+        font-size: 1.5em;
+        padding: 0.2em;
        
      }
 
